--- a/Ember_JS_Training_Zoho/app/components/home-page.hbs
+++ b/Ember_JS_Training_Zoho/app/components/home-page.hbs
@@ -8,5 +8,7 @@
 <LinkTo @route="home" class="link-buttons">Home</LinkTo>
 <LinkTo @route="BMI" class="link-buttons">BMI Calculator</LinkTo>
 <LinkTo @route="book-ticket" class="link-buttons">Railway Reservation</LinkTo>
+<LinkTo @route="registration" class="link-buttons">Student Form</LinkTo>
+<LinkTo @route="social-media" class="link-buttons">Social Media</LinkTo>
 
 {{outlet}}
