--- a/Ember_JS_Training_Zoho/app/styles/app.css
+++ b/Ember_JS_Training_Zoho/app/styles/app.css
@@ -1,3 +1,4 @@
 /* Ember supports plain CSS out of the box. More info: https://cli.emberjs.com/release/advanced-use/stylesheets/ */
-@import "./bmi.css";
-@import "./home.css";
+@import url("./bmi.css");
+@import url("./home.css");
+@import url("./social.css");
