--- a/Ember_JS_Training_Zoho/app/styles/bmi.css
+++ b/Ember_JS_Training_Zoho/app/styles/bmi.css
@@ -1,4 +1,3 @@
-
 input {
   padding: 0.2em;
   margin: 10px;
@@ -6,6 +5,15 @@ input {
 
 input:focus {
   border: 2px solid black;
+}
+
+select {
+  padding: 0.2em;
+  margin: 10px;
+}
+
+select:focus {
+  border: 2px solid red;
 }
 
 button {
@@ -34,10 +42,6 @@ button:focus {
   cursor: pointer;
 }
 
-div {
-  margin: 20px;
-}
-
 .bmi-box {
   border: 2px solid grey;
   border-radius: 5px;
@@ -46,7 +50,4 @@ div {
   padding: 1.2em;
   position: relative;
   left: 15em;
-}
-
-.bmi-result-box {
 }
