--- a/Ember_JS_Training_Zoho/app/components/bmi.hbs
+++ b/Ember_JS_Training_Zoho/app/components/bmi.hbs
@@ -2,7 +2,7 @@
 
 <h1> BMI Calculator </h1>
 
-<div class="bmi-box">
+<div class="container-fluid">
 	Please Enter Your Weight : 
 	<input id="weight" type="number" {{on "input" this.updateWeight }} placeholder="Kg"><br/>
 	Please Enter Your Height : 
